--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 }
 .flexible{
     display: flex;
-    margin-bottom: 80px;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
@@ -65,9 +65,9 @@ h2{
     font-size: 50px;
     font-weight: bold;
 }
-#boxes{
+.boxes{
     margin-left: 156px;
-    margin-right: 150px;
+    margin-right: 156px;
 }
 .mission-content{
     background: rgba(79, 157, 166, 0.1);
@@ -99,4 +99,30 @@ h2{
 h3{
     font-size: 24px;
     font-weight: 600;
+}
+.fourty{
+    width: 35%;
+}
+.fourty img{
+    width:90%;
+    margin-left: 19px;
+}
+.sixty{
+    width: 75%;
+}
+.bg{
+    background-image: url('/images/shapes/shape-1.png');
+    background-repeat: no-repeat;
+    background-size: 13%;
+    background-position: 4%  29%;
+
+}
+h4{
+    font-size: 36px;
+    font-weight: bold;
+    line-height: 54px;
+}
+span{
+    font-size: 36px;
+    font-weight: bold;
 }
