--- a/style.css
+++ b/style.css
@@ -104,14 +104,14 @@ h3{
     font-weight: 600;
 }
 .fourty{
-    width: 35%;
+    width: 36%;
 }
 .fourty img{
     width:90%;
     margin-left: 19px;
 }
 .sixty{
-    width: 70%;
+    width: 60%;
 }
 #bg{
     background-image: url('/images/shapes/shape-1.png');
@@ -145,7 +145,10 @@ h5{
     padding-right: 20%;
 }
 #develop{
-    padding: 2.3%;
+    padding: 3% 2% 3% 5%;
+}
+#know-part{
+    padding: 3% 2% 3% 0%;
 }
 #own-part{
     text-align: center;
@@ -165,7 +168,7 @@ footer h2{
     font-family: 'Lobster', cursive;
    
 }
-.red{
+.footer-year{
     color: #FF5959;
     margin-bottom: 0;
 }
