polishing is going

--- a/style.css
+++ b/style.css
@@ -114,14 +114,14 @@ h3{
     width: 60%;
 }
 #bg{
-    background-image: url('/images/shapes/shape-1.png');
+    background-image: url('images/shapes/shape-1.png');
     background-repeat: no-repeat;
     background-size: 13%;
     background-position: 4%  23%;
 
 }
 #bg1{
-    background-image: url('/images/shapes/shape-1.png');
+    background-image: url('images/shapes/shape-1.png');
     background-repeat: no-repeat;
     background-size: 13%;
     background-position: 93%  92%;
